--- a/src/sample/view/login.fxml
+++ b/src/sample/view/login.fxml
@@ -8,19 +8,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.LoginController">
    <children>
-      <ImageView fitHeight="600.0" fitWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="700.0" fitWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@../images/A321XLR-MEA.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="login" layoutX="378.0" layoutY="183.0" mnemonicParsing="false" onAction="#login" style="-fx-background-color: lightblue;" text="Login" AnchorPane.leftAnchor="378.0" AnchorPane.topAnchor="183.0" />
-      <TextField fx:id="username" layoutX="304.0" layoutY="77.0" prefHeight="25.0" prefWidth="193.0" promptText="username" style="-fx-background-color: lightblue;" AnchorPane.leftAnchor="304.0" AnchorPane.topAnchor="77.0">
+      <Button fx:id="login" layoutX="477.0" layoutY="212.0" mnemonicParsing="false" onAction="#login" style="-fx-background-color: lightblue;" text="Login" AnchorPane.leftAnchor="477.0" AnchorPane.rightAnchor="477.0" AnchorPane.topAnchor="212.0" />
+      <TextField fx:id="username" layoutX="304.0" layoutY="77.0" prefHeight="25.0" prefWidth="193.0" promptText="username" style="-fx-background-color: lightblue;" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="400.0" AnchorPane.topAnchor="100.0">
          <font>
             <Font size="14.0" />
          </font></TextField>
-      <PasswordField fx:id="password" layoutX="304.0" layoutY="134.0" prefHeight="25.0" prefWidth="193.0" promptText="Password" style="-fx-background-color: lightblue;" AnchorPane.leftAnchor="304.0" AnchorPane.topAnchor="134.0">
+      <PasswordField fx:id="password" layoutX="304.0" layoutY="134.0" prefHeight="25.0" prefWidth="193.0" promptText="Password" style="-fx-background-color: lightblue;" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="400.0" AnchorPane.topAnchor="150.0">
          <font>
             <Font size="14.0" />
          </font>
@@ -30,7 +30,7 @@
             <Image url="@../images/hide.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="472.0" layoutY="137.0">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="575.0" layoutY="153.0" AnchorPane.rightAnchor="400.0" AnchorPane.topAnchor="153.0">
          <image>
             <Image url="@../images/show.png" />
          </image>
